fix overflow

--- a/src/app/main-view/rightbar/rightbar.component.scss
+++ b/src/app/main-view/rightbar/rightbar.component.scss
@@ -6,8 +6,8 @@
   display:inline-block;
   padding:15px 0;
   color:white;
+  overflow-y: scroll;
   overflow-x: hidden;
-
   .features{
     border-top: 1px solid rgba(145, 150, 156, 0.25);
     margin: 20px 0;
